--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
 body {
     font-size: 15pt;
+    color: lightpink;
+}
+label{
+    color:white;
+}
+aside {
+  width: 30%;
+  padding-left: 15px;
+  margin-left: 15px;
+  float: right;
+  font-style: italic;
+  background-color: #444444;
 }
